components/4.18.x/others/index.md
# Miscellaneous Components

Number of Miscellaneous Components: 70 in 69 JAR artifacts (3 deprecated)

    
| Component | Artifact | Support Level | Since | Description |
| --- | --- | --- | --- | --- |
| [Attachments](attachments.md) | camel-attachments | Stable | 3.0 | Support for attachments on Camel messages |
| [AWS XRay](aws-xray.md) | camel-aws-xray | Stable-deprecated | 2.21 | Enable Distributed tracing using AWS XRay |
| [Azure Schema Registry](azure-schema-registry.md) | camel-azure-schema-registry | Stable | 4.2 | Azure Schema Registry Component for utilities to deal with authentication |
| [Camel YAML DSL Validator Maven Plugin](camel-yaml-dsl-validator-maven-plugin.md) |  |  |  |  |
| [CLI Connector](cli-connector.md) | camel-cli-connector | Stable | 3.19 | Runtime adapter connecting with Camel CLI |
| [CLI Debug](cli-debug.md) | camel-cli-debug | Preview | 4.17 | Remote CLI debugger |
| [Cloudevents](cloudevents.md) | camel-cloudevents | Stable | 3.15 | Camel support for the CloudEvents specification |
| [CSimple jOOR](csimple-joor.md) | camel-csimple-joor | Stable | 3.7 | jOOR compiler for csimple language |
| [CXF Transport](cxf-transport.md) | camel-cxf-transport | Stable | 2.8 | Camel Transport for Apache CXF |
| [Debug](debug.md) | camel-debug | Stable | 3.15 | Enables Camel Route Debugging |
| [DSL](dsl.md) |  |  |  |  |
| [DSL Modeline](dsl-modeline.md) | camel-dsl-modeline | Stable | 3.16 | Camel DSL modeline |
| [Elytron](elytron.md) | camel-elytron | Stable-deprecated | 3.1 | Elytron Security Provider for camel-undertow |
| [Headersmap](headersmap.md) | camel-headersmap | Stable | 2.20 | Fast case-insensitive headers map implementation |
| [Jandex](jandex.md) | camel-jandex | Stable | 4.12 | Custom class and resource loader using jandex.idx |
| [Jasypt](jasypt.md) | camel-jasypt | Stable | 2.5 | Security using Jasypt |
| [Java DSL (runtime compiled)](java-joor-dsl.md) | camel-java-joor-dsl | Stable | 3.9 | Camel Java DSL with jOOR |
| [Jaxb XML Dsl](java-xml-jaxb-dsl.md) | camel-xml-jaxb-dsl | Stable | 3.9 | Camel DSL with XML using camel-jaxb |
| [JFR](jfr.md) | camel-jfr | Stable | 3.8 | Diagnose Camel applications with Java Flight Recorder |
| [JTA](jta.md) | camel-jta | Stable | 3.4 | Using Camel With JTA Transaction Manager |
| [Kamelet Main](kamelet-main.md) | camel-kamelet-main | Preview | 3.11 | Main to run Kamelet standalone |
| [LangChain4j Tokenizer](langchain4j-tokenizer.md) | camel-langchain4j-tokenizer | Preview | 4.8 | LangChain4j Tokenizer |
| [LevelDB](leveldb.md) | camel-leveldb | Stable-deprecated | 2.10 | Using LevelDB as persistent EIP store |
| [LRA](lra.md) | camel-lra | Preview | 2.21 | Camel saga binding for Long-Running-Action framework |
| [Mail Microsoft Oauth](mail-microsoft-oauth.md) | camel-mail-microsoft-oauth | Stable | 3.18.4 | Camel Mail OAuth2 Authenticator for Microsoft Exchange Online |
| [Main](main.md) | camel-main | Stable | 3.0 | Camel Main |
| [MDC Logging](mdc.md) | camel-mdc | Preview | 4.15 | Logging MDC (Mapped Diagnostic Context) Service |
| [Micrometer Observability](observation.md) | camel-observation | Stable | 3.21 | Observability using Micrometer Observation |
| [Micrometer Observability 2](micrometer-observability.md) | camel-micrometer-observability | Preview | 4.15 | Micrometer Observability implementation of Camel Telemetry |
| [Micrometer Prometheus](micrometer-prometheus.md) | camel-micrometer-prometheus | Stable | 4.3 | Camel Micrometer Prometheus for Camel Main |
| [Microprofile Config](microprofile-config.md) | camel-microprofile-config | Stable | 3.0 | Bridging Eclipse MicroProfile Config with Camel properties |
| [Microprofile Fault Tolerance](microprofile-fault-tolerance.md) | camel-microprofile-fault-tolerance | Stable | 3.3 | Circuit Breaker EIP using MicroProfile Fault Tolerance |
| [Microprofile Health](microprofile-health.md) | camel-microprofile-health | Stable | 3.0 | Expose Camel health checks via MicroProfile Health |
| [Oauth](oauth.md) | camel-oauth | Preview | 4.12 | Camel OAuth (Preview) |
| [Observability Services](observability-services.md) | camel-observability-services | Preview | 4.9 | Camel Observability Services |
| [Openapi Java](openapi-java.md) | camel-openapi-java | Stable | 3.1 | Rest DSL support for using OpenApi doc |
| [Openapi Validator](openapi-validator.md) | camel-openapi-validator | Stable | 4.7 | OpenAPI validator for Camel Rest DSL |
| [OpenTelemetry](opentelemetry.md) | camel-opentelemetry | Stable | 3.5 | Distributed tracing using OpenTelemetry |
| [Opentelemetry2](opentelemetry2.md) | camel-opentelemetry2 | Stable | 4.11 | Implementation of Camel Opentelemetry based on the Camel Telemetry spec |
| [Platform HTTP Jolokia](platform-http-jolokia.md) | camel-platform-http-jolokia | Stable | 4.5 | Jolokia plugin for standalone Camel HTTP Platform |
| [Platform Http Main](platform-http-main.md) | camel-platform-http-main | Stable | 4.0 | Platform HTTP for standalone Camel Main applications |
| [Platform Http Vertx](platform-http-vertx.md) | camel-platform-http-vertx | Stable | 3.2 | Implementation of the Platform HTTP Engine based on Vert.x Web |
| [Reactive Executor Tomcat](reactive-executor-tomcat.md) | camel-reactive-executor-tomcat | Experimental | 3.17 | Reactive Executor for camel-core using Apache Tomcat |
| [Reactive Executor Vert.x](reactive-executor-vertx.md) | camel-reactive-executor-vertx | Experimental | 3.0 | Reactive Executor for camel-core using Vert.x |
| [Reactor](reactor.md) | camel-reactor | Stable | 2.20 | Reactor based back-end for Camel’s reactive streams component |
| [Redis](redis.md) | camel-redis | Stable | 3.5 | Aggregation repository using Redis as datastore |
| [Resilience4j](resilience4j.md) | camel-resilience4j | Stable | 3.0 | Circuit Breaker EIP using Resilience4j |
| [Resilience4j Micrometer](resilience4j-micrometer.md) | camel-resilience4j-micrometer | Stable | 4.15 | Micrometer statistics for Resilience4j |
| [Resourceresolver Github](resourceresolver-github.md) | camel-resourceresolver-github | Stable | 3.11 | Resource resolver to load files from GitHub |
| [RxJava](rxjava.md) | camel-rxjava | Stable | 2.22 | RxJava based back-end for Camel’s reactive streams component |
| [Shiro](shiro.md) | camel-shiro | Stable | 2.5 | Security using Shiro |
| [Spring Cloud Config](spring-cloud-config.md) | camel-spring-cloud-config | Stable | 4.12 | Camel Spring Cloud Config support |
| [Spring Main](spring-main.md) | camel-spring-main | Stable | 3.2 | Camel Spring Main support |
| [Spring Security](spring-security.md) | camel-spring-security | Stable | 2.3 | Security using Spring Security |
| [Spring XML](spring-xml.md) | camel-spring-xml | Stable | 3.9 | Camel Spring with XML DSL |
| [Springdoc](springdoc.md) | openapi-java |  | 3.14 | Springdoc Swagger UI for openapi-java in spring boot |
| [Telemetry](telemetry.md) | camel-telemetry | Preview | 4.11 | Distributed telemetry common interfaces |
| [Telemetry Dev](telemetry-dev.md) | camel-telemetry-dev | Preview | 4.11 | Basic implementation of Camel Telemetry useful for development purposes |
| [Test JUnit5](test-junit5.md) | camel-test-junit5 | Stable | 3.0 | Camel unit testing with JUnit 5 |
| [Test JUnit6](test-junit6.md) | camel-test-junit6 | Preview | 4.17 | Camel unit testing with JUnit 6 |
| [Test Main JUnit5](test-main-junit5.md) | camel-test-main-junit5 | Stable | 3.16 | Camel unit testing with Main and JUnit 5 |
| [Test Main JUnit6](test-main-junit6.md) | camel-test-main-junit6 | Preview | 4.17 | Camel unit testing with Main and JUnit 6 |
| [Test Spring JUnit5](test-spring-junit5.md) | camel-test-spring-junit5 | Stable | 3.0 | Camel unit testing with Spring and JUnit 5 |
| [Test Spring JUnit6](test-spring-junit6.md) | camel-test-spring-junit6 | Preview | 4.17 | Camel unit testing with Spring and JUnit 6 |
| [ThreadPoolFactory Vert.x](threadpoolfactory-vertx.md) | camel-threadpoolfactory-vertx | Experimental | 3.5 | ThreadPoolFactory for camel-core using Vert.x |
| [Tracing](tracing.md) | camel-tracing | Stable | 3.5 | Distributed tracing common interfaces |
| [Undertow Spring Security](undertow-spring-security.md) | camel-undertow-spring-security | Stable | 3.3 | Spring Security Provider for camel-undertow |
| [Write Ahead Log Strategy for Resume API](wal.md) | camel-wal | Stable | 3.20 | Write Ahead Log Strategy for Resume API |
| [XML Io Dsl](java-xml-io-dsl.md) | camel-xml-io-dsl | Stable | 3.9 | Camel DSL with XML |
| [YAML DSL](yaml-dsl.md) | camel-yaml-dsl | Stable | 3.9 | Camel YAML DSL |